# EchoLens

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  VERSION.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: launch.json
docs/: MVP-architecture.md  PRD.md  architecture.md  configuration.md  creator-knowledge-profile.md  database-design.md  deepseek-analysis.md  development.md  frontend-api.md  knowledge-query.md  local-source-scan-design.md  logging.md  operation-worker.md  principles.md  semantic-search-and-qa.md  source-evidence-navigation.md  tech-stack.md  video-editing-export.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: mysql_audio_migration.sql  mysql_creator_identity_migration.sql  mysql_frontend_actions_migration.sql  mysql_intelligence_migration.sql  mysql_market_insights_migration.sql  mysql_schema.sql
tests/: test_analysis_worker.py  test_audio_paths.py  test_batch_operations.py  test_batch_video_routes.py  test_content_repository.py  test_content_routes.py  test_creator_profile.py  test_creator_profile_api.py  test_creator_profile_service.py  test_deepseek_analysis.py  test_evidence.py  test_evidence_exports.py  test_faster_whisper.py  test_frontend_api_routes.py  test_frontend_api_service.py  test_frontend_operations.py  test_intelligence_api_routes.py  test_intelligence_api_service.py  test_intelligence_changes.py  test_intelligence_management_routes.py  test_intelligence_management_service.py  test_job_retry_api.py  (+14 more)
(+104 files in other folders)
