[project]
name = "echolens"
version = "0.1.0"
description = "AI-powered voice content understanding system"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0,<6.0.0",
    "typer>=0.12.0",
]

[project.scripts]
echolens = "echolens.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
