[project]
name = "echolens"
version = "0.1.0"
description = "AI-powered voice content understanding system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "faster-whisper==1.2.1",
    "mysql-connector-python>=9.0.0",
    "openai>=1.0.0,<3.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0,<6.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
echolens = "echolens.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
